@@ -35,8 +35,8 @@ public record PushTemplateAddVO(
                         pushTemplateAddRequest.name(),
                         pushTemplateAddRequest.code(),
                         entry.getKey(),
-                        entry.getValue().get(0),
-                        entry.getValue().get(1)
+                        entry.getValue().getFirst(),
+                        entry.getValue().size() >= 2 ? entry.getValue().get(1) : null
                     )
                 )
                 .toList()
